--- a/packages/payload/package.json
+++ b/packages/payload/package.json
@@ -1,21 +1,24 @@
 {
-  "name": "@alfanjauhari-com/api",
+  "name": "@alfanjauhari-com/payload",
   "type": "module",
   "version": "1.0.0",
+  "exports": {
+    "./*": "./src/*.ts",
+    "./libs/*": "./src/libs/*.ts",
+    "./collections/*": "./src/collections/*.ts"
+  },
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "generate-types": "payload generate:types"
+    "clean": "rm -rf node_modules bun.lock .turbo"
   },
   "dependencies": {
     "@payloadcms/db-postgres": "^3.48.0",
     "@payloadcms/next": "^3.48.0",
     "@payloadcms/richtext-lexical": "^3.48.0",
     "graphql": "^16.11.0",
-    "next": "^15.4.2",
     "payload": "^3.48.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
     "sharp": "^0.34.3"
+  },
+  "devDependencies": {
+    "typescript": "^5.8.3"
   }
 }
